Review and completion: - Warning missing, attempt to manage them: In progress - Notification display message in the "wrong" channel/don't open the UI - \n wasn't taken into account: FIXED - LogToSystemConsoleImplemented - Soft refacto on ErrorHandler to take intoAccount OMFDeveException - Devs shall use Custom Exception based on OMF DevException