@@ -1,12 +1,13 @@
 package com.samares_engineering.omf.omf_core_framework.errormanagement2.exceptions;
 
-import com.samares_engineering.omf.omf_core_framework.errormanagement2.logging.log.OMFColors2;
 import com.samares_engineering.omf.omf_core_framework.errormanagement2.logging.log.OMFLog2;
 
+import java.util.Arrays;
+import java.util.HashSet;
+import java.util.List;
 import java.util.Set;
 
-public class OMFWarningException extends BaseOMFException {
-    private Set<OMFExceptionModifier2> modifiers;
+public class OMFWarningException extends OMFDevException {
 
 
     /**
@@ -27,39 +28,18 @@ public class OMFWarningException extends BaseOMFException {
      * Simple message
      */
     public OMFWarningException(String message, Throwable cause, OMFExceptionModifier2... modifiers) {
-        this(new OMFLog2().text(message), cause, modifiers);
+        this(new OMFLog2().warn(message), cause, modifiers);
     }
+
+
 
     /**
      * Full constructor wrapping causing exception
      */
     public OMFWarningException(OMFLog2 message, Throwable cause, OMFExceptionModifier2... modifiers) {
         super(message.toString(), cause);
-        OMFLog = message;
-        this.modifiers = Set.of(modifiers);
+        this.modifiers = new HashSet<>(Arrays.asList(modifiers));
+        this.modifiers.add(OMFExceptionModifier2.WARNING);
     }
 
-    /*
-     * Getters
-     */
-
-    public OMFLog2 getUiMessage() {
-        return OMFLog;
-    }
-
-    public Set<OMFExceptionModifier2> getModifiers() {
-        return modifiers;
-    }
-
-    public boolean isSilent() {
-        return modifiers.contains(OMFExceptionModifier2.SILENT);
-    }
-
-    public boolean isDeactivateFeature() {
-        return modifiers.contains(OMFExceptionModifier2.DEACTIVATE_FEATURE);
-    }
-
-    public boolean isRollbackChanges() {
-        return !modifiers.contains(OMFExceptionModifier2.NO_ROLLBACK);
-    }
 }
